added a new version

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <h2 id="task-count" class="font-bold text-2xl">06</h2>
                     </div>
                 </div>
-                <div id="Discover-main" class="flex bg-linear-to-r from-blue-600 to-blue-300 p-2 rounded-lg">
+                <div id="btn-first" class="flex bg-linear-to-r from-blue-600 to-blue-300 p-2 rounded-lg">
                     <img class="w-10 h-10 relative top-5" src="./assets/board.png" alt="">
                     <h3 class="mt-4 text-white">Discover Something <br>New Today!</h3>
                 </div>
@@ -162,7 +162,7 @@
                             <h1 class="font-semibold">21 March 2025</h1>
                         </div>
                         <div>
-                            <button id="btnTask-6" class="btn btn-task btn-primary mt-10">Completed</button>
+                            <button id="end-btn" class="btn btn-task btn-primary mt-10">Completed</button>
                         </div>
                     </div>
                 </div>
@@ -171,10 +171,10 @@
         <section id="clear-container" class="text-center w-96 mt-10 bg-white">
             <div class="flex">
                 <img class="mx-auto relative top-2" src="./assets/activity.png" alt="">
-                <h1 class="text-xl relative right-4 top-2">Activity Log</h1>
+                <h1 class="text-xl relative right-16 top-2">Activity Log</h1>
             </div>
             <br>
-            <button id="btn-clear" class="btn btn-primary">Clear History</button>
+            <button id="btn-remove" class="btn btn-primary">Clear History</button>
         </section>
     </main>
     <script src="js/script.js"></script>
