--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
                     <h1 class=" text-3xl">Dev<span class="font-bold">Board</span></h1>
                 </div>
                 <div>
-                    <button id="btn-back" class="bg-blue-600 text-white rounded-xl font-semibold p-2">Back To
+                    <button id="btn-replace" class="bg-blue-600 text-white rounded-xl font-semibold p-2">Back To
                         Desk</button>
                 </div>
         </nav>
